--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -72,29 +72,33 @@ h6 {
   .section-padding {
     padding: 2rem;
   }
-  .logoimgwidth{
-    width:250px;
-    height: 80px ;
+
+  .logoimgwidth {
+    width: 250px;
+    height: 80px;
   }
 }
+
 @media (max-width: 1024px) {
-  .logoimgwidth{
-    width:230px;
-    height: 80px ;
+  .logoimgwidth {
+    width: 230px;
+    height: 80px;
 
   }
 }
+
 @media (max-width: 430px) {
-  .logoimgwidth{
-    width:200px;
-    height: 70px ;
+  .logoimgwidth {
+    width: 200px;
+    height: 70px;
 
   }
 }
+
 @media (max-width: 350px) {
-  .logoimgwidth{
-    width:160px;
-    height: 50px ;
+  .logoimgwidth {
+    width: 160px;
+    height: 50px;
 
   }
 }
@@ -121,34 +125,36 @@ h6 {
 
 @media (max-width: 669px) {
   .imgresize {
-   width: 200px;
-   
+    width: 200px;
+
   }
 }
 
 @media (max-width: 469px) {
   .imgresize {
-   width: 150px;
-   
+    width: 150px;
+
   }
 }
 
 @media (max-width: 375px) {
   .imgresize {
     width: 80px;
-   margin: 5px;
+    margin: 5px;
   }
 }
+
 @media (max-width: 361px) {
   .imgresize {
     width: 80px;
-   margin: 5px;
+    margin: 5px;
   }
 }
+
 @media (max-width: 320px) {
   .imgresize {
     width: 80px;
-   margin: 5px;
+    margin: 5px;
   }
 }
 
@@ -193,16 +199,22 @@ h6 {
   margin-top: 3px !important;
 }
 
-.dropdown-menu{
+.dropdown-menu {
   border: none !important;
 }
-.dropdown-menu.show{
+
+.dropdown-menu.show {
   width: 100%;
   background-color: #8D8D87;
 }
 
-.blue-linear-gradient{
+.blue-linear-gradient {
   background: linear-gradient(90deg, rgba(0, 51, 102, 0.5) 0.01%, rgba(47, 89, 130, 0.416082) 77.4%, rgba(255, 255, 255, 0) 100%);
+
+}
+
+.blue-linear-gradient-ar {
+  background: linear-gradient(-90deg, rgba(0, 51, 102, 0.5) 0.01%, rgba(47, 89, 130, 0.416082) 77.4%, rgba(255, 255, 255, 0) 100%);
 
 }
 
@@ -211,8 +223,18 @@ h6 {
   display: flex;
   border-top: 1px solid #ccc;
   border-left: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;  
+  border-bottom: 1px solid #ccc;
   border-radius: 12px 0 0 12px;
+  overflow: hidden;
+  width: 90%;
+}
+
+.search-bar-ar {
+  display: flex;
+  border-top: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0 12px 12px 0;
   overflow: hidden;
   width: 90%;
 }
@@ -223,38 +245,72 @@ h6 {
   box-shadow: none;
   height: 50px;
   padding-left: 30px;
-  padding-right: 30px; 
+  padding-right: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.search-bar-ar .form-control,
+.search-bar .btn {
+  border: none;
+  box-shadow: none;
+  height: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-bar-ar .form-control {
+  border-right: 1px solid #ccc;
+  border-radius: 0px !important;
+}
+
 .search-bar .form-control {
   border-right: 1px solid #ccc;
-  border-radius: 0px !important; 
+  border-radius: 0px !important;
 }
 
 .btn-new {
-  background-color: #002D72; 
+  background-color: #002D72;
   color: white;
   border-radius: 0 12px 12px 0;
 
 }
-.btn{
-  background-color: #002D72 !important; 
+
+.btn-new-ar {
+  background-color: #002D72;
+  color: white;
+  border-radius: 12px 0 0 12px;
+
+}
+
+.btn {
+  background-color: #002D72 !important;
   color: white !important;
 }
+
 .btn-new:hover {
- color: black;
- background-color: white;
- border: 1px solid #ccc;
+  color: black;
+  background-color: white;
+  border: 1px solid #ccc;
 }
-.active-tab{
+
+.btn-new-ar:hover {
+  color: black;
+  background-color: white;
+  border: 1px solid #ccc;
+}
+
+.active-tab {
   height: 100%;
   background-color: white;
   border-radius: 10px 10px 0 0;
 }
-.textAlignJustify{
+
+.textAlignJustify {
   text-align: justify;
 
 }
@@ -265,31 +321,40 @@ h6 {
   font-size: 24px;
   cursor: pointer;
 }
+
 .custom-toggler-icon {
   font-size: 24px;
 }
-.main-screen-container{
+
+.main-screen-container {
   margin-bottom: 80px;
 }
 
-.cover-image{
+.cover-image {
   height: 70vh;
 }
+
+.flag .in {
+left: 11px;
+}
+
 @media (min-width: 992px) {
   .custom-navbar-toggler {
     display: none;
   }
 }
+
 @media (max-width: 991px) {
   .navbar-collapse {
     display: none;
     position: absolute;
-    top: 56px; 
+    top: 56px;
     left: 0;
     width: 100%;
     background: white;
     z-index: 1;
   }
+
   .navbar-collapse.show {
     display: block;
   }
@@ -298,33 +363,60 @@ h6 {
 @media (max-width: 767.98px) {
   .search-bar .form-control {
     border: 1px solid #ccc;
-    border-radius: 10px !important; 
+    border-radius: 10px !important;
   }
-  .filter-container{
+
+  .search-bar-ar .form-control {
+    border: 1px solid #ccc;
+    border-radius: 10px !important;
+  }
+
+  .filter-container {
     bottom: -80% !important;
   }
-  .search-bar{
+
+  .search-bar {
     border-top: none;
     border-left: none;
-    border-bottom: none;  
+    border-bottom: none;
     gap: 16px;
     border-radius: 0 !important;
   }
-  .cover-image{
+
+  .search-bar-ar {
+    border-top: none;
+    border-left: none;
+    border-bottom: none;
+    gap: 16px;
+    border-radius: 0 !important;
+  }
+
+  .cover-image {
     height: 40vh;
   }
-  .main-screen-container{
+
+  .main-screen-container {
     margin-bottom: 80%;
   }
-  .filterTypeInput{
+
+  .filterTypeInput {
     width: 100% !important;
     border: 1px solid #ccc !important;
   }
-  .filterBedroom{
+
+  .filterBedroom {
     width: 100% !important;
     border: 1px solid #ccc !important;
   }
-  .btn-new{
+
+  .btn-new {
+    width: 100% !important;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+  .btn-new-ar {
     width: 100% !important;
     margin-top: 10px;
     padding: 10px;
@@ -338,7 +430,8 @@ h6 {
   font-size: 22px;
   font-weight: 600;
 }
-.main-screen-subcontainer{
+
+.main-screen-subcontainer {
   width: 415px;
   padding: 20px 30px;
   text-align: center;
@@ -351,16 +444,22 @@ h6 {
   left: 20px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
+
 .project-description-main-image-bg {
-  background-color: rgba(0, 51, 102, 0.4) ;
+  background-color: rgba(0, 51, 102, 0.4);
   width: 414px;
   height: 307px;
   border-radius: 21px;
   top: -20px;
   left: -20px
 }
-.sub-images-project-desc{
+
+.sub-images-project-desc {
   margin-left: 60px;
+}
+
+.sub-images-project-desc-ar {
+  margin-right: 50px;
 }
 
 .facilites-container {
@@ -376,29 +475,76 @@ h6 {
   min-height: 30px;
   line-height: 20px;
 }
-.common-icons{
+
+.common-icons {
   width: 40px;
   height: 40px;
 }
+
 .banner-image-project-desc {
   min-height: 500px;
 }
-.policyImgHieght{
+
+.policyImgHieght {
   min-height: 120px;
 }
+
 .floor-plan-heading {
   max-width: 160px;
   border-top-left-radius: 0.50rem;
   border-top-right-radius: 0.50rem;
 }
-.floor-plan-container{
+
+.floor-plan-container {
   padding: 28px;
 }
-.floor-plan-nav{
+
+.floor-plan-nav {
   padding: 28px;
   gap: 16px;
 }
 
+@media (max-width:985px) {
+  .sub-images-project-desc {
+    margin-left: 0px;
+    margin-top: 60px;
+  }
+  .sub-images-project-desc-ar {
+    margin-right: 0px;
+    margin-top: 60px;
+  }
+}
+// @media (max-width:1210px),(min-width:990px) {
+//   .project-description-main-image {
+//     height: 200px;
+//     width: 50%;
+//   }
+//   // .project-description-main-image-bg {
+//   //   background-color: rgba(0, 51, 102, 0.4);
+//   //   width: 50%;
+//   //   height: 200px;
+//   //   border-radius: 21px;
+//   //   top: -20px;
+//   //   left: -20px;
+//   // }
+  
+// }
+
+.phone-input-ar .arrow {
+  left: -21px !important;
+}
+
+.phone-input-ar .flag {
+  left: 16px !important;
+}
+
+.phone-input-ars .arrow {
+  left: 20px !important;
+}
+
+.phone-input-ar .flag {
+  left: 16px !important;
+}
 @media (max-width: 767.98px) {
   .main-screen-content {
     width: 300px;
@@ -408,38 +554,51 @@ h6 {
     font-size: 16px;
     font-weight: 600;
   }
-  .floor-plan-nav{
+
+  .floor-plan-nav {
     padding: 14px;
     gap: 10px;
   }
-  .floor-plan-container{
+
+  .floor-plan-container {
     padding: 16px;
-    border-top-right-radius:0px,
+    border-top-right-radius: 0px,
   }
+
   .floor-plan-heading {
     max-width: 100%;
   }
-  .common-icons{
+
+  .common-icons {
     width: 30px;
     height: 30px;
   }
+
   .project-description-main-image {
     height: 200px;
     width: 90%;
   }
-  .project-description-main-image-bg{
-    background-color: rgba(0, 51, 102, 0.4) ;
+
+  .project-description-main-image-bg {
+    background-color: rgba(0, 51, 102, 0.4);
     width: 90%;
     height: 200px;
     border-radius: 21px;
     top: -20px;
     left: -20px;
   }
-  .sub-images-project-desc{
+
+  .sub-images-project-desc {
     margin-left: 0px;
     margin-top: 60px;
   }
-  .sub-image-project-description{
+
+  .sub-images-project-desc-ar {
+    margin-right: 0px;
+    margin-top: 60px;
+  }
+
+  .sub-image-project-description {
     width: 55px !important;
     height: 55px !important;
   }
@@ -447,25 +606,50 @@ h6 {
   .facilites-container {
     width: 80px;
   }
-  
+
   .facility {
     height: 60px;
   }
-  
+
   .facility-text {
     font-size: 12px;
     min-height: 26px;
     line-height: 16px;
 
   }
-  .newsAndMedia{
+
+  .newsAndMedia {
     font-size: 17px;
     padding: 0 10px 0px 0px !important;
   }
+
   .banner-image-project-desc {
     min-height: 254px;
   }
-  .policyImgHieght{
+
+  .policyImgHieght {
     min-height: 80px;
+  }
+}
+
+.date-selector {
+  display: flex;
+  justify-content: end;
+  gap: 1rem;
+}
+
+.selectDate {
+  padding: 0.5rem;
+  border: 1px solid black;
+  border-radius: 8px;
+  font-size: 1rem;
+}
+
+@media (max-width: 321px) {
+  .selectDate {
+    padding: 0.3rem;
+    border: 1px solid black;
+    border-radius: 8px;
+    font-size: 1rem;
   }
 }
