--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -29,6 +29,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 26px;
+  height: 80vh;
   background-color: map-get($theme-colors, "white");
 }
 
@@ -693,4 +694,14 @@ h6 {
     border-radius: 8px;
     font-size: 1rem;
   }
+}
+
+.whatsapp-button-container {
+  position: fixed;
+  bottom: 50px;
+  /* Adjust as needed */
+  right: 100px;
+  /* Adjust as needed */
+  z-index: 1000;
+  /* Ensure it's above other content */
 }
