--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -241,6 +241,9 @@ h6 {
 .dropdown-menu {
   border: none !important;
 }
+.control-dots {
+  display: none !important;
+}
 
 .dropdown-menu.show {
   width: 100%;
